+ html: overflow x hidden (test for mobile  behavior using chrome) + menu popover: caused issue with accessibility (aria-hidden warning)

--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,10 @@ a:hover {
   color: #535bf2;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   margin: 0;
   place-items: start;
